--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: npolack <npolack@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/13 11:22:57 by npolack           #+#    #+#              #
-#    Updated: 2024/12/18 18:34:06 by npolack          ###   ########.fr        #
+#    Updated: 2024/12/19 23:16:26 by ilia             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = bin/philo
 
 SRCS_DIR	= srcs
 OBJS_DIR	= objs
-CC			= cc
+CC			= gcc
 C_FLAGS		= -Wall -Wextra -Werror -g
 
 SRCS		= philo.c common.c ft_atoi.c fork.c
