--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: npolack <npolack@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/13 11:22:57 by npolack           #+#    #+#              #
-#    Updated: 2024/12/23 15:49:10 by ilia             ###   ########.fr        #
+#    Updated: 2024/12/31 21:38:36 by ilia             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,14 +14,14 @@ NAME = bin/philo
 
 SRCS_DIR	= srcs
 OBJS_DIR	= objs
-CC			= gcc
-C_FLAGS		= -Wall -Wextra -Werror -g #-L../../../LeakSanitizer/ -llsan
+CC			= cc
+C_FLAGS		= -Wall -Wextra -Werror -g -fsanitize=thread #-L../../../LeakSanitizer/ -llsan
 
 SRCS		= fork.c\
 			  philo.c\
 			  common.c\
-			  customers.c\
 			  manager.c\
+			  customers.c\
 			  establishment.c\
 
 SRCS		:= $(addprefix $(SRCS_DIR)/, $(SRCS))
