--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: npolack <npolack@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/13 11:22:57 by npolack           #+#    #+#              #
-#    Updated: 2025/01/13 23:12:02 by ilia             ###   ########.fr        #
+#    Updated: 2025/01/14 17:35:35 by npolack          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,7 @@ endif
 
 SRCS_DIR	= srcs
 OBJS_DIR	= objs
-C_FLAGS		= -Wall -Wextra -Werror -g #-fsanitize=thread 
+C_FLAGS		= -Wall -Wextra -Werror -g 
 
 SRCS		=	philo.c\
 				common.c\
@@ -37,16 +37,22 @@ SRCS		=	philo.c\
 SRCS		:= $(addprefix $(SRCS_DIR)/, $(SRCS))
 OBJS		= $(SRCS:$(SRCS_DIR)/%.c=$(OBJS_DIR)/%.o)
 
+all				: $(NAME) 
+
 $(OBJS_DIR)/%.o	: $(SRCS_DIR)/%.c 
 	@mkdir -p $(OBJS_DIR)
 	$(CC) $(C_FLAGS) -c $< -o $@
 
-all				: $(NAME) 
+san         : C_FLAGS += -fsanitize=thread
+san         : $(NAME)
 
 $(NAME)			: $(OBJS)
 	@mkdir -p bin
 	$(CC) $(C_FLAGS) $^ -o $@ $(LIBS)
 
+unlink			:
+	@mkdir -p bin
+	cc srcs/close_sem.c -o bin/unlink_sem
 
 clean			:
 	rm -fr $(OBJS_DIR)
