--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: npolack <npolack@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/13 11:22:57 by npolack           #+#    #+#              #
-#    Updated: 2025/01/16 09:03:42 by npolack          ###   ########.fr        #
+#    Updated: 2025/01/26 18:08:23 by npolack          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,15 +24,15 @@ endif
 
 SRCS_DIR	= srcs
 OBJS_DIR	= objs
-C_FLAGS		= -Wall -Wextra -Werror 
+C_FLAGS		= -Wall -Wextra -Werror -g 
 
-SRCS		=	philo.c\
-				common.c\
-				customers.c\
-				manager.c\
-			 	establishment.c\
-			 	routine.c\
-				job.c\
+SRCS		=	philo_bonus.c\
+				common_bonus.c\
+				customers_bonus.c\
+				manager_bonus.c\
+			 	establishment_bonus.c\
+			 	routine_bonus.c\
+				job_bonus.c\
 
 SRCS		:= $(addprefix $(SRCS_DIR)/, $(SRCS))
 OBJS		= $(SRCS:$(SRCS_DIR)/%.c=$(OBJS_DIR)/%.o)
